Show guesses (in first row)

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -7,50 +7,11 @@ import Board from "./Board";
 <header></header>
 <main>
   <Board client:load />
-  <!-- <div class="board">
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-  </div> -->
 </main>
 
-<style is:global>
+<style>
   header {
     height: 56px;
     border-bottom: 1px solid rgb(66, 66, 66);
-  }
-
-  .cell {
-    width: 60px;
-    height: 60px;
-    border: 2px solid #3a3a3c;
-    box-sizing: border-box;
   }
 </style>
