--- a/src/components/cell.module.css
+++ b/src/components/cell.module.css
@@ -14,4 +14,22 @@
       &.has-letter {
           border-color: rgb(86, 87, 88)
       }
+
+      &[data-animation='pop'] {
+          animation-name: PopIn;
+          animation-duration: 100ms;
+      }
+
+  }
+
+  @keyframes PopIn {
+      from {
+          transform: scale(0.8);
+          opacity: 0;
+      }
+
+      40% {
+          transform: scale(1.1);
+          opacity: 1;
+      }
   }
