Non-functional keyboard

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -10,6 +10,12 @@ import Board from "./Board";
 </main>
 
 <style>
+  :root {
+    --correct: #538d4e;
+    --present: #b59f3b;
+    --absent: #3a3a3c;
+  }
+
   header {
     height: 56px;
     border-bottom: 1px solid rgb(66, 66, 66);
