--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,12 +1,12 @@
 ---
-// import astroLogo from '../assets/astro.svg';
-// import background from '../assets/background.svg';
 import Board from "./Board";
+import TodoList from "./TodoList.astro";
 ---
 
 <header></header>
 <main>
   <Board client:load />
+  <TodoList />
 </main>
 
 <style>
