--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -20,4 +20,8 @@ import TodoList from "./TodoList.astro";
     height: 56px;
     border-bottom: 1px solid rgb(66, 66, 66);
   }
+
+  main {
+    padding-inline: 0.5rem;
+  }
 </style>
