Use a CSS variable for the flip timeout

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -14,6 +14,7 @@ import TodoList from "./TodoList.astro";
     --correct: #538d4e;
     --present: #b59f3b;
     --absent: #3a3a3c;
+    --flip-timeout: 250;
   }
 
   header {
