--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,133 @@
+---
+// Base domain URL without trailing slash
+const domainBaseURL = "https://sgarcia-wordle-clone.netlify.app";
+const ogImageUrl =
+  "https://sgarcia-wordle-clone.netlify.app/img/wordle-favicon.ico";
+
+// Website publisher & region
+const authorPublisher = "Santiago García";
+const geoRegion = "DE-DE";
+
+// SEO title, description and keywords
+const seoTitle = "Wordle Clone";
+const seoDescription = "A simple wordle clone built with Astro and React";
+const seoKeywords = "Wordle, React, Astro";
+
+// Twitter card data
+const twitter = {
+  title: seoTitle,
+  description: seoDescription,
+  image: ogImageUrl,
+  // site: "@devidev_io",
+  // creator: "@devidev_io",
+};
+
+// Open graph data
+const openGraph = {
+  title: seoTitle,
+  description: seoDescription,
+  url: domainBaseURL,
+  image: ogImageUrl,
+  type: "website",
+  locale: "en_US",
+  siteName: "Santiago García",
+};
+
+// Dublin core
+const dublinCore = {
+  title: "Santiago García",
+  creator: authorPublisher,
+  publisher: authorPublisher,
+  rights: authorPublisher,
+  description: seoDescription,
+  language: "en",
+  type: "Software",
+  format: "text/html",
+};
+---
+
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Crawler & Robots -->
+    <meta
+      name="robots"
+      content="index, follow, noodp, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
+    />
+    <meta name="revisit-after" content="7 days" />
+    <meta name="revisit" content="after 7 days" />
+    <!-- Start: Meta-Tags -->
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Wordle Clone</title>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Pragma" content="cache" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- End: Meta-Tags -->
+
+    <!-- Start: DNS prefetch and preconnect -->
+    <!-- <link rel="preload" as="image" href="/img/logo.svg" /> -->
+    <!-- <link rel="preconnect" href="https://brain.papersend.io" /> -->
+    <!-- End: DNS prefetch and preconnect -->
+
+    <!-- Start: Theming and Favicons -->
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      crossorigin="anonymous"
+      href="/img/wordle-favicon.ico"
+    />
+    <!-- <link rel="alternate icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
+        <link rel="alternate icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
+        <link rel="icon" type="image/x-icon" href="/img/favicon/favicon.ico">
+        <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
+        <link rel="manifest" href="/img/favicon/site.webmanifest"> -->
+    <!-- End: Theming and Favicons -->
+
+    <!-- Start: Misc meta tags -->
+    <link rel="sitemap" href="/sitemap-index.xml" />
+    <link rel="canonical" href={Astro.url} />
+
+    <meta name="geo.region" content={geoRegion} />
+    <meta name="author" content={authorPublisher} />
+    <meta name="publisher" content={authorPublisher} />
+    <meta name="copyright" content={authorPublisher} />
+    <!-- End: Misc meta tags -->
+
+    <!-- Start: Facebook open graph -->
+    <meta property="og:title" content={openGraph.title} />
+    <meta property="og:description" content={openGraph.description} />
+    <meta property="og:url" content={openGraph.url} />
+    <meta property="og:type" content={openGraph.type} />
+    <meta property="og:image" content={openGraph.image} />
+    <meta property="og:locale" content={openGraph.locale} />
+    <meta property="og:site_name" content={openGraph.siteName} />
+    <!-- End: Facebook open graph -->
+
+    <!-- Start: Twitter card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content={twitter.title} />
+    <meta name="twitter:description" content={twitter.description} />
+    <meta name="twitter:image" content={twitter.image} />
+    <!-- <meta name="twitter:site" content={twitter.site} />
+    <meta name="twitter:creator" content={twitter.creator} /> -->
+    <!-- End: Twitter card -->
+
+    <!-- Start: Dublin Core (DC) -->
+    <meta name="DC.Title" content={dublinCore.title} />
+    <meta name="DC.Creator" content={dublinCore.creator} />
+    <meta name="DC.Rights" content={dublinCore.rights} />
+    <meta name="DC.Publisher" content={dublinCore.publisher} />
+    <meta name="DC.Description" content={dublinCore.description} />
+    <meta name="DC.Language" content={dublinCore.language} />
+    <meta name="DC.Type" content={dublinCore.type} />
+    <meta name="DC.Format" content={dublinCore.format} />
+    <!-- End: Dublin Core (DC) -->
+
+    <!-- Title & Description -->
+    <title>{seoTitle}</title>
+    <meta name="description" content={seoDescription} />
+    <meta name="abstract" content={seoDescription} />
+    <meta name="keywords" content={seoKeywords} />
   </head>
   <body>
     <slot />
