Add an about page

--- a/src/components/cell.module.css
+++ b/src/components/cell.module.css
@@ -3,7 +3,7 @@
       height: 60px;
       border: 2px solid #3a3a3c;
       box-sizing: border-box;
-      font-family: 'Arial';
+      font-family: var(--font-family);
       font-size: 2rem;
       font-weight: bold;
       color: white;
