--- a/src/components/Keyboard.module.css
+++ b/src/components/Keyboard.module.css
@@ -8,7 +8,7 @@
 }
 
 .Key {
-    font-family: "Arial";
+    font-family: var(--font-family);
     font-size: 1.25em;
     font-weight: bold;
     border: 0;
