--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -130,16 +130,51 @@ const dublinCore = {
     <meta name="keywords" content={seoKeywords} />
   </head>
   <body>
-    <slot />
+    <header>
+      <a href="/">Home</a>
+      <a href="/about">About</a>
+    </header>
+    <main>
+      <slot />
+    </main>
   </body>
 </html>
 
 <style>
+  :root {
+    --correct: #538d4e;
+    --present: #b59f3b;
+    --absent: #3a3a3c;
+    --flip-timeout: 250;
+    --font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font-family);
+  }
+
   html,
   body {
     margin: 0;
     width: 100%;
     height: 100%;
     background: rgb(18, 18, 19);
+  }
+
+  header {
+    height: 56px;
+    border-bottom: 1px solid rgb(66, 66, 66);
+    display: flex;
+    align-items: center;
+    /* justify-content: fl; */
+    padding-inline: 2rem;
+    gap: 2rem;
+    /* text-transform: uppercase; */
+
+    & a {
+      color: white;
+      text-decoration: none;
+    }
+  }
+
+  main {
+    padding-inline: 0.5rem;
   }
 </style>
